- Balanced the dataset and improved performance a bit.